# crop1080

./: README.md  app.py  pyproject.toml
.github/: ci.yml
src/crop1080/: cli.py
